--- a/Projects/xxdCmdb/web/templates/docker_index.html
+++ b/Projects/xxdCmdb/web/templates/docker_index.html
@@ -10,29 +10,26 @@
 {#    <link rel="stylesheet" href="/static/css/bootstrap-select.css"/>#}
 
 {#    <link href="/static/css/ui-dialog.css" rel="stylesheet">#}
-    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/artDialog-6.0.4/css/ui-dialog.css" rel="stylesheet">
+{#    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/artDialog-6.0.4/css/ui-dialog.css" rel="stylesheet">#}
 
 
     <!-- 当前项目样式文件 -->
     <link href="/static/css/sb-admin.css" rel="stylesheet">
     <link href="/static/css/sb-bk-theme.css" rel="stylesheet">
     <link href="/static/css/bk.css" rel="stylesheet">
-
-{#    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/kendoui-2015.2.624/styles/kendo.common.min.css" rel="stylesheet">#}
-    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/kendoui-2015.2.624/styles/kendo.default.min.css" rel="stylesheet">
-
+    <link href="/static/css/kendo.default.min.css" rel="stylesheet">
     <link href="/static/css/kendo.common.min.css" rel="stylesheet">
-{#    <link href="/static/css/kendo.default.min.css" rel="stylesheet">#}
+
     <link href="/static/css/bk.css" rel="stylesheet">
-    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/jquery.sumoselect-2.0.0/sumoselect.css" rel="stylesheet">
-    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/icheck-1.x/skins/all.css" rel="stylesheet">
-    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/icheck-1.x/skins/flat/blue.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/bootstrap-select.css"/>
-    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/toastr-2.1.2/toastr.min.css" rel="stylesheet">
-    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/opentip-master-2.0/css/opentip.css" rel="stylesheet">
     <link href="/static/css/simple-line-icons.css">
     <link href="/static/css/style.css">
-    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/artDialog-6.0.4/css/ui-dialog.css" rel="stylesheet">
+    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/jquery.sumoselect-2.0.0/sumoselect.css" rel="stylesheet">
+    <link href="https://magicbox.bkclouds.cc/static_api/v3/assets/icheck-1.x/skins/all.css" rel="stylesheet">
+    <link href="/static/css/blue.css" rel="stylesheet">
+    <link href="/static/css/toastr.min.css" rel="stylesheet">
+    <link href="/static/css/opentip.css" rel="stylesheet">
+    <link href="/static/css/ui-dialog.css">
     <style type="text/css">
         .self:hover{
             color: yellow;
@@ -517,16 +514,13 @@
 
     <!-- 包括所有kendoui的js插件或者可以根据需要使用的js插件调用　-->
     <script src="/static/js/kendo.all.min.js"></script>
-{#    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/kendoui-2015.2.624/js/kendo.all.min.js"></script>#}
-{#    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/artDialog-6.0.4/dist/dialog-min.js"></script>#}
-{#    <script src="/static/js/bk.js"></script>#}
     <script src="https://magicbox.bkclouds.cc/static_api/v3/bk/js/bk.js"></script>
-    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/jquery.sumoselect-2.0.0/jquery.sumoselect.min.js"></script>
-    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/icheck-1.x/icheck.min.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap-select.js"></script>
-    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/toastr-2.1.2/toastr.min.js"></script>
-    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/opentip-master-2.0/downloads/opentip-jquery.min.js"></script>
-    <script src="https://magicbox.bkclouds.cc/static_api/v3/assets/artDialog-6.0.4/dist/dialog-min.js"></script>
+    <script src="/static/js/jquery.sumoselect.min.js"></script>
+    <script src="/static/js/icheck.min.js"></script>
+    <script src="/static/js/bootstrap-select.js"></script>
+    <script src="/static/js/toastr.min.js"></script>
+    <script src="/static/js/opentip-jquery.min.js"></script>
+    <script src="/static/js/dialog-min.js"></script>
     <script type="text/javascript">
         $("#plugin4_demo10").click(function(){
     			var d = dialog({
