--- a/Projects/xxdCmdb/web/templates/docker_index.html
+++ b/Projects/xxdCmdb/web/templates/docker_index.html
@@ -391,7 +391,7 @@
                                     <div class="form-group">
                                         <label class="col-sm-2 control-label" style="margin-top: 6px">挂载：</label>
                                         <div class="col-sm-10" style="margin-top: 6px">
-                                            <input type="text" class="form-control" placeholder="/opt/webaspps/" id="container_app_name" name="user_account">
+                                            <input type="text" class="form-control" placeholder="/opt/webapps/" id="container_app_name" name="user_account">
                                         </div>
                                         <a style="display: inline-block;;font-size: 5px; margin-left: 111px; color: grey;opacity:0.5;"><i style="color: red" class="fa fa-info-circle" aria-hidden="true"></i> 容器启动时将会自动挂载宿主机该目录.</a>
                                     </div>
