0306 add physical_server_status

--- a/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
@@ -58,6 +58,10 @@
             <i class="fa fa-map-o" aria-hidden="true"></i>
             <span>资产查询</span>
         </a>
+        <a id="net" class="menu-item" href="/net.html">
+            <i class="fa fa-signal" aria-hidden="true"></i>
+            <span>网段管理</span>
+        </a>
         <a class="menu-item" id="business" style="cursor:pointer">
             <i class="fa fa-free-code-camp" aria-hidden="true"></i>
             <span>业务管理</span>
